--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-	"ios": "react-native run-ios",
-	"ios12": "react-native run-ios --simulator \"iPhone 12 (14.4)\"",
+    "ios": "react-native run-ios",
+    "ios12": "react-native run-ios --simulator \"iPhone 12 (14.4)\"",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint '*/**/*.{js,ts,tsx}'  --ignore-pattern !'.prettierrc.js' --fix --max-warnings 0",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -21,10 +22,16 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/parser": "^5.2.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.0",
     "jest": "^26.6.3",
+    "lint-staged": ">=10",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "2.4.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
@@ -40,6 +47,12 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,ts,tsx,md,html,css}": [
+      "prettier --write",
+      "yarn lint"
     ]
   }
 }
