--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.2.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
