--- a/package.json
+++ b/package.json
@@ -60,9 +60,12 @@
     ]
   },
   "lint-staged": {
-    "*.{js,jsx,json,ts,tsx,md,html,css}": [
+    "*.{js,jsx,json,ts,tsx,html,css}": [
       "prettier --write",
       "yarn lint"
+    ],
+    "*.{md}": [
+      "prettier --write"
     ]
   }
 }
